# gaviwhatsapp

./: .gitignore  README.md
examples/: .env.example  .gitignore  README.md
examples/broadcast-campaign/: README.md  index.ts  package.json  recipients.csv
examples/send-message-python/: README.md  main.py  requirements.txt
examples/send-message-ts/: README.md  index.ts  package.json
examples/webhook-receiver/: README.md  index.ts  package.json
mcp/: README.md  package.json
mcp/src/: index.js
sdk-py/: README.md  pyproject.toml
sdk-py/gaviwhatsapp/: __init__.py  client.py
sdk-ts/: README.md  package.json
sdk-ts/src/: index.ts
