[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaviwhatsapp"
version = "0.1.0"
description = "WhatsApp API SDK for Python — send messages, templates, media, and broadcasts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]
keywords = ["whatsapp", "whatsapp-api", "gaviwhatsapp", "mcp"]

[project.urls]
Homepage = "https://www.gaviventures.com"
Documentation = "https://www.gaviventures.com/docs/api"
Repository = "https://github.com/gaviwhatsapp/gaviwhatsapp-python"
